##Text encoding: utf-8

2006-09-24 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac (MP_*): Replaced by GCU_* macros.
	* AUTHORS: Updated information.
	* README: Added a note about the applications for manpage processing.
	* acinclude.m4: Updated. All macros have been renamed to GCU_* instead
	of MP_*.
	(MP_PROG_XMLLINT): Added check, if PKG_CHECK_EXISTS macro is
	available. Removed `echo' usage by using AC_MSG_* macros.
	(MP_PROG_XSLTPROC): Make xsltproc optional, so users don't need a
	local installation. Likewise for `echo' usage.
	(MP_PROG_MAN): Likewise.
	* docs/man/Makefile.am (man1_MANS, man3_MANS): Made xsltproc optional.
	(check-local): Cosmetic fixes.

2006-09-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/window.cc: fixed typo in menus. [#17832].

2006-09-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystaldoc.cc: close message box when button is clicked. [#17830].

2006-09-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: make things compile without bodr.

2006-09-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/application.cc: include gi18n.h.
	* programs/crystal/atomsdlg.cc: ditto.
	* programs/crystal/celldlg.cc: ditto.
	* programs/crystal/cleavagesdlg.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/linesdlg.cc: ditto.
	* programs/crystal/main.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/crystal/document.h: remove bonobo.h.

2006-09-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystaldoc.cc: make GCrystal use GLView and GLDocument classes,
	and allow for orthogonal projection (FoV == 0).
	* gcu/crystaldoc.h: ditto.
	* gcu/crystalview.cc: ditto.
	* gcu/crystalview.h: ditto.
	* gcu/document.h: ditto.
	* gcu/glview.cc: ditto.
	* gcu/glview.h: ditto.
	* gcu/gtkcrystalviewer.cc: ditto.
	* gcu/macros.h: ditto.
	* glade/crystal/prefs.glade: ditto.
	* glade/crystal/view-settings.glade: ditto.